# DAL1

./: .gitignore  .project  CMakeLists.txt  CMakeMacros.cmake  CTestConfig.cmake  INSTALL  README
apps/: CMakeLists.txt  TBBraw2h5.cpp  bf2h5.cpp  bf2h5_old.cpp  dal-config.cc  h52presto.py  lewrite.cpp  lopes2h5.cpp  ms2h5.cpp  msread.cpp  mswrite.cpp  read_tbb.cpp  spectrum.py  tbb2h5.cpp  tswrite.cpp
apps/bf2h5/: Bf2h5Calculator.cpp  Bf2h5Calculator.h  CMakeLists.txt  HDF5Writer.cpp  HDF5Writer.h  StationBeamReader.cpp  StationBeamReader.h  bf2h5.cpp  bf2h5.h  bf2h5main.cpp
doc/: CMakeLists.txt  DAL_Coding.doc  DAL_Coding_CXX.doc  DAL_Coding_Python.doc  Doxyfile.Manual.in  Doxyfile.in  DoxyfileAPI.in  DoxyfileManual.in  Hyperslab 2D column.graffle  Hyperslab 2D row.graffle  Hyperslab 2D sub-array.graffle  Manual-latex-header.tex  dal_changelog.doc  dal_changes.doc  dal_codingConventions.doc  dal_coding_cpp.doc  dal_coding_guidelines.doc  dal_data_formats.doc  dal_devel_bf.doc  dal_devel_contributing.doc  dal_devel_release.doc  dal_development.doc  dal_examples_cpp.doc  dal_examples_hdf5.doc  dal_examples_python.doc  dal_file_formats.doc  dal_file_types.doc  dal_hdf5.doc  dal_installation.doc  dal_module_bindings.doc  dal_module_core.doc  dal_module_data_hl.doc  dal_overview.doc  dal_testing.doc  dal_users_manual.doc  dal_xml.doc  html_footer.html  latex_header.tex  pil.h
doc/developer/: CMakeLists.txt  Doxyfile.in
doc/figures/: DAL_IO_Mode.graffle  Hyperslab 2D sub-arrays.graffle
doc/user/: CMakeLists.txt  Doxyfile.in
implement/: BFRaw.cpp  BFRaw.h  BFRawFormat.h  BeamFormed.cpp  BeamFormed.h  BeamGroup.cpp  BeamGroup.h  BeamSubband.cpp  BeamSubband.h  Bf2h5Calculator.h  CMakeLists.txt  Common.cpp  Common.h  CommonAttributes.cpp  CommonAttributes.h  Coordinate.cpp  Coordinate.h  DataType.cpp  DataType.h  Database.cpp  Database.h  DirectionCoordinate.cpp  DirectionCoordinate.h  Enumerations.cpp  Enumerations.h  HDF5Common.cpp  HDF5Common.h  HDF5Writer.cpp  HDF5Writer.h  LinearCoordinate.cpp  LinearCoordinate.h  StationBeamReader.cpp  StationBeamReader.h  TBB.cc  TBB.cpp  TBB.h  TBB_DipoleDataset.cpp  TBB_DipoleDataset.h  TBB_StationGroup.cpp  TBB_StationGroup.h  (+71 more)
implement/bindings/: CMakeLists.txt  num_util.cc  num_util.h  pydal.cc  pydal.h  pydal_coordinates.cc  pydal_core.cc  pydal_core_dalColumn.cc  pydal_core_dalDataset.cc  pydal_core_dalTable.cc  pydal_data_common.cc  pydal_data_hl.cc
implement/coordinates/: Angle.cc  Angle.h  Coordinate.cc  Coordinate.cpp  Coordinate.h  CoordinateConversion.cc  CoordinateConversion.h  CoordinateGenerator.cc  CoordinateGenerator.h  CoordinateInterface.cc  CoordinateInterface.h  CoordinatesGroup.cc  CoordinatesGroup.cpp  CoordinatesGroup.h  DirectionCoordinate.cc  DirectionCoordinate.h  LinearCoordinate.cc  LinearCoordinate.h  RaDec.cc  RaDec.h  Stokes.cc  Stokes.h  StokesCoordinate.cc  StokesCoordinate.cpp  StokesCoordinate.h  TabularCoordinate.cc  TabularCoordinate.h  ValMatrix.h
implement/core/: AccessMode.cc  AccessMode.h  AccessProperties.cc  AccessProperties.h  DataType.cc  DataType.cpp  DataType.h  Database.cc  Database.h  Enumerations.cc  Enumerations.h  FileAccessProperties.cc  FileAccessProperties.h  HDF5Attribute.cc  HDF5Attribute.h  HDF5CompoundDatatype.cc  HDF5CompoundDatatype.h  HDF5Dataspace.cc  HDF5Dataspace.h  HDF5Datatype.cc  HDF5Datatype.h  HDF5Object.cc  HDF5Object.h  ValMatrix.cc  ValMatrix.h  convert.h  dalArray.cc  dalArray.cpp  dalArray.h  dalAttribute.cc  dalAttribute.cpp  dalAttribute.h  dalBaseTypes.cc  dalBaseTypes.h  dalColumn.cc  dalColumn.cpp  dalColumn.h  dalCommon.cc  dalCommon.cpp  dalCommon.h  (+19 more)
implement/data_common/: AttributesInterface.cc  AttributesInterface.h  AttributesObservation.cc  AttributesObservation.h  AttributesProject.cc  AttributesProject.h  CommonAttributes.cc  CommonAttributes.cpp  CommonAttributes.h  CommonAttributesObservation.cc  CommonAttributesObservation.h  CommonAttributesProject.cc  CommonAttributesProject.h  CommonInterface.cc  CommonInterface.cpp  CommonInterface.h  Filename.cc  Filename.cpp  Filename.h  HDF5CommonInterface.cc  HDF5CommonInterface.h  HDF5Dataset.cc  HDF5Dataset.h  HDF5Hyperslab.cc  HDF5Hyperslab.h  HDF5Property.cc  HDF5Property.h  HDF5Table.cc  HDF5Table.h  SAS_Settings.cc  SAS_Settings.h  Timestamp.cc  Timestamp.cpp  Timestamp.h
implement/data_hl/: BFRaw.cc  BFRaw.h  BFRawFormat.h  BF_Beam.cc  BF_Beam.h  BF_BeamGroup.cc  BF_BeamGroup.h  BF_Dataset.cc  BF_Dataset.cpp  BF_Dataset.h  BF_PencilBeam.cc  BF_PencilBeam.cpp  BF_PencilBeam.h  BF_PrimaryPointing.cc  BF_PrimaryPointing.h  BF_ProcessingHistory.cc  BF_ProcessingHistory.h  BF_RootGroup.cc  BF_RootGroup.h  BF_StationBeam.cc  BF_StationBeam.cpp  BF_StationBeam.h  BF_StokesDataset.cc  BF_StokesDataset.h  BF_SubArrayPointing.cc  BF_SubArrayPointing.h  BF_SysLog.cc  BF_SysLog.h  BeamFormed.cc  BeamFormed.h  BeamGroup.cc  BeamGroup.cpp  BeamGroup.h  BeamSubband.cc  BeamSubband.cpp  BeamSubband.h  ITS_ExperimentMeta.cc  ITS_ExperimentMeta.h  LOPES_EventFile.cc  LOPES_EventFile.h  (+31 more)
scripts/: CMakeLists.txt  dal_experimental_build.in
src/: CMakeLists.txt
src/apps/: AddMetadata.cpp  CMakeLists.txt  TBBraw2h5.cpp  dal-config.cc  h52presto.py  h52psrchive.py  lopes2h5.cpp  ms2h5.cpp  msread.cpp  read_tbb.cpp  tbb2h5.cpp  tbbmd.cpp  udp-copy.c
src/dal/: CMakeLists.txt
src/pydal/: CMakeLists.txt  pydal.cc  (+16 more)
test/: CMakeLists.txt  README  baseline_intensity.py  bf2h5.cpp  dal_tests.py  datacube.py  leread.cpp  lewrite.cpp  msread.cpp  mswrite.cpp  plot_tbb.py  read_tbb.cpp  read_test.cpp  runTests.sh  tBF_Dataset.cpp  tBF_StationBeam.cpp  tBF_SysLog.cpp  tBeamFormed.cc  tBeamFormed.cpp  tBeamFormed.py  tBeamFormed_pulsar_downsample.py  tBeamGroup.cc  tBeamGroup.cpp  tBeamSubband.cc  tBeamSubband.cpp  tCS1_baseline_dal.py  tCS1_visibility_dal.py  tCommonAttributes.cpp  tCoordinate.cpp  tCoordinatesGroup.cpp  tDEMO_paste_LFFE.py  tDEMO_plotting_CS1.py  tDEMO_plotting_LFFE.py  tDirectionCoordinate.cpp  tEnumerations.cc  tEnumerations.cpp  tFilename.cpp  tHDF5Common.cc  tHDF5Common.cpp  tLFFE_ds_dal.py  (+54 more)
(+506 files in other folders)
